[package]
name = "derive_wrapper"
version = "0.1.1"
authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Rust custom derive macro for wrapping types"
categories = ["no-std", "data-structures"]
keywords = ["derive", "wrap", "macro", "custom-derive", "display_from"]
repository = "https://github.com/elichai/derive-wrapper"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
#syn = { version = "0.15", features = ["full", "extra-traits", "derive"] } # -> For development
syn = "0.15"
quote = "0.6"

[features]
default = ["std"]
std = []

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "elichai/derive-wrapper" }
